...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Price" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qPH-Vf-miI" userLabel="subtotalTextField">
                                <rect key="frame" x="339" y="28" width="90" height="36"/>
                                <accessibility key="accessibilityConfiguration" hint="Price before tip" label="Check subtotal"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nc6-0M-Rkv" userLabel="clearButton">
                                <rect key="frame" x="437" y="32" width="36" height="30"/>
                                <accessibility key="accessibilityConfiguration" hint="Clear the subtotal field" label="Clear"/>
                                <state key="normal" title="Clear">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="15" borderStyle="roundedRect" placeholder="Percentage" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mb7-fb-oJV" userLabel="tipPercentageTextField">
                                <rect key="frame" x="339" y="72" width="90" height="36"/>
                                <accessibility key="accessibilityConfiguration" hint="" label="Tip percentage">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" placeholder="Count" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0mt-6f-DE8" userLabel="numberInPartyTextField">
                                <rect key="frame" x="339" y="116" width="90" height="36"/>
                                <accessibility key="accessibilityConfiguration" hint="" label="Number in party"/>
...
                                </constraints>
                            </view>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VFj-lQ-CHA">
                                <rect key="frame" x="307" y="169" width="24" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" label="Tip label">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nVd-ec-uEy">
                                <rect key="frame" x="293.5" y="197.5" width="37.5" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" label="Total label">
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Per person" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vEa-nv-fOc">
                                <rect key="frame" x="248" y="226" width="83" height="20.5"/>
                                <accessibility key="accessibilityConfiguration" label="Per person label">
...
